# aoc2024

./: .gitignore  README.md  pyproject.toml
day01/: __main__.py
day02/: __main__.py  bonus.py
day03/: __main__.py
day04/: __main__.py
day05/: __main__.py
day06/: __main__.py
day07/: __main__.py
day08/: __main__.py
day09/: __main__.py
day10/: __main__.py
day11/: __main__.py
day12/: __main__.py
day13/: __main__.py
day14/: __main__.py
day15/: part1.py  part2.py
day16/: __main__.py
day17/: part1.py  part2_dfs.py  part2_z3.py  utils.py
day18/: __main__.py
day19/: __main__.py
day20/: __main__.py
day21/: __main__.py
day22/: __main__.py
day23/: __main__.py
day24/: part1.py  part2.py  query.py
day25/: __main__.py
